fixed update club documentation
